# INFO-H502_OpenGL_project_2023-2024

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
objects/: sapin.dae
project/: CMakeLists.txt
project/src/: camera.h  cubeMap.h  light.h  main.cpp
project/src/meshes/: animated_object.h  material.h  object.h  ogldev_engine_common.h  static_object.h  texture.h  utils.h  world_transform.h
project/src/shaders/: fragment_cubeMap.cpp  fragment_ground.cpp  fragment_skinning.cpp  fragment_tree.cpp  vertex_cubeMap.cpp  vertex_ground.cpp  vertex_skinning.cpp  vertex_tree.cpp
project/src/utils/: utils.h
simple_project/: CMakeLists.txt
simple_project/src/: cubeMap.h  light.h  main.cpp  shader.h
simple_project/src/meshes/: object.h  static_object.h  texture.h
simple_project/src/shaders/: fragment_ground.cpp  fragment_skinning.cpp  vertex_skinning.cpp
